# HR-OOV

./: .env.example  Makefile  README.md  environment.yml  pyproject.toml
data/: eval_dataset_50.json  example__ready-for-annotation.json
docs/: training_custom_hit_models.md
lib/OnT/: config.yaml  config_custom.yaml  eval_tmp.py  train_ont.py
lib/OnT/normalization/modified_el_norm/: ELNormalizedData.py  (+1 more)
lib/hierarchy_transformers/scripts/: config_custom.yaml  train_hit.py
logs/: oov_entity_mentions_d_equals_five_results.json  oov_entity_mentions_d_equals_one_results.json  oov_entity_mentions_d_equals_three_results.json
notebooks/: discussion_notebook.ipynb  misc_nb.ipynb  retrieval_nb.ipynb  scratch_notebook.ipynb
scripts/: compute_normalised_inter_and_diff.py  entity_lexicon_to_label_mappings.py  get_snomed.py  load_benchmark_extract_questions.py  load_questions_and_extract_entities.py  preprocess_entity_lexicon.py  preprocess_ont_dir.py  process_mirage_get_entity_list.py  produce_embeddings.py  sample.py
scripts/remote_deployment/: bootstrap.sh  build_hit_data.sh  build_hit_data_custom.sh  build_ont_data.sh  build_ont_data_custom.sh  build_ont_data_custom_hard.sh  download_gdrive_zip.sh  download_mirage.sh  download_models.sh  download_snomed.sh  eval_ont_tmp.sh  init.sh  multitarget.sh  process_diff_and_sample.sh  process_mirage.sh  single_target.sh  train_hit_custom.sh  train_ont_custom.sh
src/hroov/experiments/: multitarget.py  single_target.py
src/hroov/utils/: data_utils.py  gpu_retrievers.py  math_functools.py  query_utils.py  retrievers.py
